--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
         <h1> Dinosaurios
 
 <ul> 
-    <li></li>
+    <li>Tirannosaure</li>
+    <LI>Triceratos</LI>
+    <LI>Diplodocus</LI>
+
+
 </ul>
    </body>
 </html>
