--- a/index.html
+++ b/index.html
@@ -5,14 +5,21 @@
        <title>Animals prehistòrics</title>
    </head>
    <body>
-        <h1> Dinosaurios
+        <h1> Dinosaurios:</h1>b>
 
 <ul> 
     <li>Tirannosaure</li>
     <LI>Triceratos</LI>
     <LI>Diplodocus</LI>
 
+</ul>
 
+    <b>Pasos er veure dinosauros a internet</b>
+<ol>
+    <li>Obrir el navegador</li>
+    <li>Escriure "DInosaures" al cercador</li>
+    <li>Fer clic als enllaços</li>
+</ol>
 </ul>
    </body>
 </html>
