--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
        <title>Animals prehistòrics</title>
    </head>
    <body>
-        <h1> Dinosaurios:</h1>b>
+        <h1> Dinosaurios:</h1>
 
-<ul> 
+<ul>
     <li>Tirannosaure</li>
     <LI>Triceratos</LI>
     <LI>Diplodocus</LI>
 
 </ul>
 
-    <b>Pasos er veure dinosauros a internet</b>
+    <b>Pasos per veure dinosauros a internet:</b>
 <ol>
     <li>Obrir el navegador</li>
     <li>Escriure "DInosaures" al cercador</li>
