--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 </ul>
 
-    <b>Pasos per veure dinosauros a internet:</b>
+    <h1>Pasos per veure dinosauros a internet:</h1>
 <ol>
     <li>Obrir el navegador</li>
-    <li>Escriure "DInosaures" al cercador</li>
+    <li>Escriure "Dinosaures" al cercador</li>
     <li>Fer clic als enllaços</li>
 </ol>
 </ul>
