--- a/index.html
+++ b/index.html
@@ -13,14 +13,28 @@
     <LI>Diplodocus</LI>
 
 </ul>
-
-    <h1>Pasos per veure dinosauros a internet:</h1>
+     <hr>
+    <div>
+<h1>Pasos per veure dinosauros a internet:</h1>
 <ol>
+    <p>
     <li>Obrir el navegador</li>
     <li>Escriure "Dinosaures" al cercador</li>
     <li>Fer clic als enllaços</li>
-</ol>
-</ul>
+    </p>
+</div>
+    <hr>
+    <!-- Secció amb imatge -->
+     <div>
+       alt="Dinosaurio" width="200"
+     </div>
+     <hr>
+     <a href="https://ca.wikipedia.org/wiki/Dinosaures" target="_blank">Més informació sobre els dinosaures</a>
+      
+     <br>
+
+     <a href="galeria.html" target="_blank"> Galería de dinosaurios</a>(galeria.html)
+
    </body>
 </html>
 
