--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
      <br>
 
      <a href="galeria.html" target="_blank"> Galería de dinosaurios</a>(galeria.html)
-
+     <br>
+     <a href="contacte.html" target="_blank"> Contacte amb me</a>(contacte.html)
    </body>
 </html>
 
