--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </p>
 </div>
     <hr>
-    <!-- Secció amb imatge -->
+    <!-- Secció amb imatge --> 
      <div>
-       alt="Dinosaurio" width="200"
+       <img src="./imatges/dinosaurio.png" alt="Dinosaurio" width="200"/>
      </div>
      <hr>
      <a href="https://ca.wikipedia.org/wiki/Dinosaures" target="_blank">Més informació sobre els dinosaures</a>
