--- a/contacte.html
+++ b/contacte.html
@@ -16,14 +16,22 @@
    </ul>
 
    <ol>
-    <p></p>
-   <il>Primer descubrimiento: TYRANNOSAURUS REX. 1905</il>
+    <p>
+   <li>Primer descubrimiento: TYRANNOSAURUS REX.1905</li>
    
-   <il>Segundo descubrimiento: ANKYLOSAURUS. 1908</il>
+   <li>Segundo descubrimiento: ANKYLOSAURUS. 1908</li>
    
-   <il>Tercero descubrimiento:CORYTHOSAURUS. 1914</il>
+   <li>Tercero descubrimiento:CORYTHOSAURUS. 1914</li>
    </p>
 
+    <!--- Secció amb imatge -->
+    <div>
+       <img src="./fosiles/images.jpg" alt="Paleontòleg" width="200"/>
 
-      </body>
+      <br>
+      <a href="https://www.icp.cat" target="_blank">Mas información en mi Museo</a>
+    </div>
+    
+      <a href="index.html"target="_blank">Torna a la pagina principal</a>  
+    </body>
 </html>
