--- a/galeria.html
+++ b/galeria.html
@@ -22,8 +22,8 @@
 
 
        </ul>
-       <a href="galeria.html" target="_blank"> Galería de dinosaurios</a>(galeria.html)
+       <a href="galeria.html" target="_blank"> Galería de dinosaurios</a>
      <br>
-     <a href="contacte.html" target="_blank"> Contacte amb me</a>(contacte.html)
+     <a href="contacte.html" target="_blank"> Contacte amb me</a>
    </body>
 </html>
