--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       
      <br>
 
-     <a href="./galeria.html" target="_blank"> Galería de dinosaurios</a>(galeria.html)
+     <a href="./galeria.html" target="_blank"> Galería de dinosaurios</a>
      <br>
-     <a href="./contacte.html" target="_blank"> Contacte amb me</a>(contacte.html)
+     <a href="./contacte.html" target="_blank"> Contacte amb me</a>
    </body>
 </html>
 
