--- a/contacte.html
+++ b/contacte.html
@@ -8,8 +8,8 @@
    
 
    <body>
-    Sóc un paleontòleg apassionat per l’estudi dels dinosaures i la divulgació científica."
-    <ul></ul>
+    Sóc un paleontòleg apassionat per l’estudi dels dinosaures i la divulgació científica.
+    <ul>
     
     <li>Nom: Dr. Fòssil Juràssic</li>
     <li>Professió: Paleontòleg</li>
